--- a/package.json
+++ b/package.json
@@ -25,7 +25,16 @@
   },
 
   "dependencies": {
-    "express": "~3.4.4"
+    "express": "~3.4.4",
+    "angular-ui-sortable": "^0.13.4",
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
+    "express-session": "^1.13.0",
+    "guid": "0.0.12",
+    "mongoose": "^4.4.8",
+    "multer": "^1.1.0",
+    "node-uuid": "^1.4.7",
+    "q": "^1.4.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
