--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "mongoose": "^4.4.12",
     "multer": "^1.1.0",
     "node-uuid": "^1.4.7",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "http": "0.0.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
