--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "angular-ui-bootstrap": "^1.3.2",
     "angular-ui-sortable": "^0.13.4",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
     "express": "~3.4.4",
     "express-session": "^1.13.0",
     "guid": "0.0.12",
+    "http": "0.0.0",
     "mongoose": "^4.4.12",
     "multer": "^1.1.0",
     "node-uuid": "^1.4.7",
-    "q": "^1.4.1",
-    "http": "0.0.0",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "q": "^1.4.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
