--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "textangular": "^1.5.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
