--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "angular-gravatar": "^0.4.1",
     "angular-ui-bootstrap": "^1.3.2",
     "angular-ui-sortable": "^0.13.4",
     "body-parser": "^1.15.0",
